--- a/public/locales/it/it.json
+++ b/public/locales/it/it.json
@@ -885,6 +885,31 @@
             "src": "/serviziImg/illustrazione/illustrazioni.webp",
             "width": 600,
             "height": 600
+          },
+          {
+            "src": "/serviziImg/illustrazione/illustrazioni11.webp",
+            "width": 600,
+            "height": 600
+          },
+          {
+            "src": "/serviziImg/illustrazione/illustrazioni12.webp",
+            "width": 600,
+            "height": 600
+          },
+          {
+            "src": "/serviziImg/illustrazione/illustrazioni13.webp",
+            "width": 600,
+            "height": 600
+          },
+          {
+            "src": "/serviziImg/illustrazione/illustrazioni14.webp",
+            "width": 600,
+            "height": 600
+          },
+          {
+            "src": "/serviziImg/illustrazione/illustrazioni15.webp",
+            "width": 600,
+            "height": 600
           }
         ],
         "galleryTitle": "Ecco alcuni esempi",
