--- a/public/locales/it/it.json
+++ b/public/locales/it/it.json
@@ -3,7 +3,7 @@
     "hero": {
       "title": {
         "uno": "Soluzioni",
-        "due": "creative"
+        "due": "Creative"
       }
     },
     "sezioneUno": {
@@ -296,6 +296,31 @@
             "src": "/serviziImg/logoDesign/logo_26.webp",
             "width": 600,
             "height": 600
+          },
+          {
+            "src": "/serviziImg/logoDesign/logo_27.webp",
+            "width": 600,
+            "height": 600
+          },
+          {
+            "src": "/serviziImg/logoDesign/logo_28.webp",
+            "width": 600,
+            "height": 600
+          },
+          {
+            "src": "/serviziImg/logoDesign/logo_29.webp",
+            "width": 600,
+            "height": 600
+          },
+          {
+            "src": "/serviziImg/logoDesign/logo_30.webp",
+            "width": 600,
+            "height": 600
+          },
+          {
+            "src": "/serviziImg/logoDesign/logo_31.webp",
+            "width": 600,
+            "height": 600
           }
         ],
         "call": "Prenota una call con me",
@@ -411,6 +436,33 @@
             "height": 600
           }
         ],
+        "gallery4": [
+          {
+            "src": "/serviziImg/branding/branding1.webp",
+            "width": 600,
+            "height": 600
+          },
+          {
+            "src": "/serviziImg/branding/branding2.webp",
+            "width": 600,
+            "height": 600
+          },
+          {
+            "src": "/serviziImg/branding/branding3.webp",
+            "width": 600,
+            "height": 600
+          },
+          {
+            "src": "/serviziImg/branding/branding4.webp",
+            "width": 600,
+            "height": 600
+          },
+          {
+            "src": "/serviziImg/branding/branding5.webp",
+            "width": 600,
+            "height": 600
+          }
+        ],
         "galleryTitle": "Ecco alcuni esempi",
         "preventivo": "Chiedi un preventivo",
 
@@ -423,7 +475,7 @@
         "img": "/serviziImg/label.png",
         "name": "Label & Packaging",
         "title": "/serviziImg/label_Title.png",
-        "introTitle": "Packaging e Label: Dai Voce al Tuo Prodotto!",
+        "introTitle": "Packaging & Label: Dai Voce al Tuo Prodotto!",
         "intro": [
           "Spesso diamo per scontati il label e il packaging design, ma in realtà, sono dei veri e propri “ambasciatori” del nostro prodotto.",
           "Immagina di passeggiare per il supermercato e notare un prodotto con un packaging accattivante e un’etichetta che trasmette un senso di qualità e personalità.",
@@ -492,7 +544,7 @@
           },
 
           {
-            "src": "/serviziImg/label/pack6.webp",
+            "src": "/serviziImg/label/pack6a.webp",
             "width": 600,
             "height": 600
           },
@@ -910,6 +962,31 @@
             "src": "/serviziImg/illustrazione/illustrazioni15.webp",
             "width": 600,
             "height": 600
+          },
+          {
+            "src": "/serviziImg/illustrazione/illustrazioni16.webp",
+            "width": 600,
+            "height": 600
+          },
+          {
+            "src": "/serviziImg/illustrazione/illustrazioni17.webp",
+            "width": 600,
+            "height": 600
+          },
+          {
+            "src": "/serviziImg/illustrazione/illustrazioni18.webp",
+            "width": 600,
+            "height": 600
+          },
+          {
+            "src": "/serviziImg/illustrazione/illustrazioni19.webp",
+            "width": 600,
+            "height": 600
+          },
+          {
+            "src": "/serviziImg/illustrazione/illustrazioni20.webp",
+            "width": 600,
+            "height": 600
           }
         ],
         "galleryTitle": "Ecco alcuni esempi",
@@ -1067,6 +1144,31 @@
             "src": "/serviziImg/creator/content28.webp",
             "width": 600,
             "height": 600
+          },
+          {
+            "src": "/serviziImg/creator/content36.webp",
+            "width": 600,
+            "height": 600
+          },
+          {
+            "src": "/serviziImg/creator/content37.webp",
+            "width": 600,
+            "height": 600
+          },
+          {
+            "src": "/serviziImg/creator/content38.webp",
+            "width": 600,
+            "height": 600
+          },
+          {
+            "src": "/serviziImg/creator/content39.webp",
+            "width": 600,
+            "height": 600
+          },
+          {
+            "src": "/serviziImg/creator/content40.webp",
+            "width": 600,
+            "height": 600
           }
         ],
         "galleryTitle": "Ecco alcuni esempi",
@@ -1152,7 +1254,7 @@
         "button": ["Branding", "Label Design"]
       },
       {
-        "img": "/portfolioImg/chappoz/cover_chappoz_new2.jpg",
+        "img": "/portfolioImg/chappoz/cover_chappoz.jpg",
         "name": "Chappoz",
         "title": "chappoz",
         "descrizione": "Azienda Agricola",
@@ -1204,6 +1306,24 @@
         "location": "Aymavilles - Valle d’Aosta",
         "link": "/portfolio/morzenti",
         "button": ["Branding", "Social Media"]
+      },
+      {
+        "img": "/portfolioImg/gourmandises/cover_gourmandises.webp",
+        "name": "Les Gourmandises ",
+        "title": "gourmandises",
+        "descrizione": "di Alice Borettaz",
+        "location": "Issogne - Valle d’Aosta",
+        "link": "/portfolio/gourmandises",
+        "button": ["Branding", "Label Design"]
+      },
+      {
+        "img": "/portfolioImg/jardin_potager/cover_jardinpotager.webp",
+        "name": "Jardin Potager",
+        "title": "jardinpotager",
+        "descrizione": "Assessorato Agricoltura e Risorse Naturali",
+        "location": "Valle d’Aosta",
+        "link": "/portfolio/jardinpotager",
+        "button": ["Illustration"]
       }
     ],
     "singleWorks": {
@@ -1438,7 +1558,7 @@
         }
       },
       "chappoz": {
-        "img": "/portfolioImg/chappoz/cover_chappoz_new2.jpg",
+        "img": "/portfolioImg/chappoz/cover_chappoz.jpg",
         "name": "Chappoz",
         "title": "chappoz",
         "descrizione": "Azienda Agricola",
@@ -1775,6 +1895,108 @@
             "/portfolioImg/morzenti/social3.jpg",
             "/portfolioImg/morzenti/social4.jpg",
             "/portfolioImg/morzenti/social5.jpg"
+          ]
+        }
+      },
+      "gourmandises": {
+        "img": "/portfolioImg/gourmandises/cover_gourmandises.webp",
+        "name": "Les Gourmandises ",
+        "title": "morzenti",
+        "descrizione": "di Alice Borettaz",
+        "location": "Issogne - Valle d’Aosta",
+        "link": "/works/morzenti",
+        "button": ["Branding", "Label Design"],
+        "introTitolo": "Progetto",
+        "cliente": {
+          "titolo": "cliente",
+          "nome": "Les Gourmandises",
+          "payoff": "di Alice Borettaz"
+        },
+        "anno": {
+          "titolo": "anno",
+          "nome": "2023 - 2025"
+        },
+        "keywords": {
+          "titolo": "keywords",
+          "nome": "Dolci, Forno, Prodotto Tipico, Golosità"
+        },
+        "servizi": {
+          "titolo": "servizi",
+          "nome": ["branding", "label design"]
+        },
+        "desc": [
+          "Alice, una giovane imprenditrice, ha deciso di riportare in auge la produzione della Piata di Issogne, un pane dolce tradizionale e riconosciuto con la denominazione DECO. ",
+          "Oltre alla Piata, nel suo laboratorio nascono altre prelibatezze da forno. Insieme, abbiamo scelto di creare un logo che rappresentasse l’elemento fondamentale alla base di tutte le sue creazioni: il grano, simbolo di autenticità e tradizione."
+        ],
+        "logoImg": "/portfolioImg/gourmandises/brand_gourmandises.webp",
+        "typo": {
+          "titolo": "Typography",
+          "typoImg": "/portfolioImg/gourmandises/typo_gourmandises_text.webp",
+          "typoImg2": "/portfolioImg/gourmandises/typo_gourmandises_font.webp"
+        },
+        "applyColor": {
+          "descrizione": "Applicazione della Palette colori",
+          "colorImg": "/portfolioImg/gourmandises/promo.webp"
+        },
+        "color": {
+          "titolo": "Brand Colors",
+          "descrizione": [
+            "Con Alice, abbiamo scelto una palette di colori pastello caldi, ispirata alle tonalità naturali dei campi e ai prodotti da forno. Questi colori trasmettono un senso di comfort e familiarità, creando un ambiente visivamente armonioso e invitante."
+          ],
+          "colorImg": "/portfolioImg/gourmandises/colors.png"
+        },
+        "fustella": {
+          "fustellaImg": "/portfolioImg/gourmandises/etichetta_fustella.png"
+        },
+        "label": {
+          "labelImg": "/portfolioImg/gourmandises/portfolio_alice7.png",
+          "cartellinoImg": "/portfolioImg/gourmandises/portfolio_alice8.png"
+        }
+      },
+      "jardinpotager": {
+        "img": "/portfolioImg/jardin_potager/cover_jardinpotager.webp",
+        "name": "Jardin Potager",
+        "title": "jardinpotager",
+        "descrizione": "Assessorato Agricoltura e Risorse Naturali",
+        "location": "Valle d’Aosta",
+        "link": "/works/morzenti",
+        "button": ["Illustration"],
+        "introTitolo": "Progetto",
+        "cliente": {
+          "titolo": "cliente",
+          "nome": "Assessorato Agricoltura <br/> e Risorse Naturali"
+        },
+        "anno": {
+          "titolo": "anno",
+          "nome": "2024 - 2025"
+        },
+
+        "servizi": {
+          "titolo": "servizi",
+          "nome": ["illustrazione - impaginazione"]
+        },
+        "desc": [
+          "Mi è stato commissionato un progetto di libro illustrato pensato per avvicinare i bambini agli antichi saperi legati alla coltivazione dell’orto, il tradizionale Jardin Potager. Ho scelto di combinare immagini vettoriali e digitali per creare uno stile visivo coinvolgente. Inoltre, ho disegnato due mascotte, una coccinella nonna e una nipote, che guidano i bambini attraverso i vari giochi presenti nel libro, accompagnandoli in un affascinante viaggio alla scoperta della cultura e delle tradizioni dell’orto."
+        ],
+        "typo": {
+          "titolo": "Typography",
+          "typoImg": "/portfolioImg/jardin_potager/typo_book_text.png",
+          "typoImg2": "/portfolioImg/jardin_potager/typo_book_font.webp"
+        },
+        "illustrazioni2": {
+          "titolo": "Illustrazione",
+          "descrizione": "Ecco a voi le 2 mascotte che accompagneranno i ragazzi delle scuole nel meraviglioso mondo del Jardin Potager.",
+          "illImg": "/portfolioImg/jardin_potager/mascotte1.png",
+          "descrizione2": "Per la realizzazione dell’intero volume sono state realizzate + di 60 illustrazioni digitali eccone alcune:",
+          "illImg2": "/portfolioImg/jardin_potager/illu2.png"
+        },
+        "libro": {
+          "illustrazioni": [
+            "/portfolioImg/jardin_potager/illu3.webp",
+            "/portfolioImg/jardin_potager/illu4.png",
+            "/portfolioImg/jardin_potager/illu5.png",
+            "/portfolioImg/jardin_potager/illu6.png",
+            "/portfolioImg/jardin_potager/illu7.png"
           ]
         }
       }
