--- a/public/locales/it/it.json
+++ b/public/locales/it/it.json
@@ -1195,9 +1195,9 @@
       },
       {
         "img": "/fraService/figma.png",
-        "name": "Prototipazione con figma",
-        "descrizione": "Testa la tua idea prima di svilupparla! Ideale per piccole aziende e start-up. Risparmia budget e tempo.",
-        "link": "https://www.thallion-dev.it/servizi/figma"
+        "name": "Costruzione Blog con WP",
+        "descrizione": "Ideale per chi ama raccontare e raccontarsi, quindi crearsi un posticino tutto suo da blogger",
+        "link": "https://www.thallion-dev.it/servizi/dcbnow"
       },
       {
         "img": "/fraService/restyle.png",
