--- a/public/locales/it/it.json
+++ b/public/locales/it/it.json
@@ -50,7 +50,7 @@
     },
     "hero": {
       "title": "/pageImg/meTitle.png",
-      "img": "/pageImg/lampadina2.webp"
+      "img": "/pageImg/lampadina.webp"
     },
     "sezioneUno": {
       "img": "/sectionsTitle/eli.png",
